--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,9 +5,17 @@ agent:
     type: e1-standard-2
     os_image: ubuntu2004
 blocks:
-  - name: 'Block #1'
+  - name: Unit tests
+    task:
+      jobs:
+        - name: running integration tests
+          commands:
+            - running integration tests
+      prologue:
+        commands:
+          - checkout
+  - name: Tests
     task:
       jobs:
         - name: 'Job #1'
-          commands:
-            - checkout
+          commands: []
