--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -22,3 +22,8 @@ blocks:
       jobs:
         - name: 'Job #1'
           commands: []
+promotions:
+  - name: Production deployment
+    pipeline_file: pipeline_2.yml
+    auto_promote:
+      when: branch = 'main' AND result ='passed'
